project(CppTestsProject)

add_executable(001_ExplicitKeyword 001_ExplicitKeyword.cpp)
add_executable(002_NullPointerDereferencing 002_NullPointerDereferencing.cpp)
add_executable(003_NonConstStaticMemberInClassInitialization 003_NonConstStaticMemberInClassInitialization.cpp)
add_executable(004_VariableAutoInitialization 004_VariableAutoInitialization.cpp)
add_executable(005_ArrayAutoInitialization 005_ArrayAutoInitialization.cpp)
add_executable(006_MainReturnErrorCode 006_MainReturnErrorCode.cpp)
add_executable(007_LoopOnIfstream 007_LoopOnIfstream.cpp)
add_executable(008_CharTypes 008_CharTypes.cpp)
